--- a/efk/requirements.yaml
+++ b/efk/requirements.yaml
@@ -1,12 +1,12 @@
 dependencies:
 - name: kibana
   version: "6.1.3"
-  #repository: https://raw.githubusercontent.com/komljen/helm-charts/master/charts/
-  repository: file://../kibana
+  repository: https://raw.githubusercontent.com/nwsheppard/helm-charts/master/charts/
+  #repository: file://../kibana
 - name: elasticsearch
   version: "6.1.3"
-  #repository: https://raw.githubusercontent.com/komljen/helm-charts/master/charts/
-  repository: file://../elasticsearch
+  repository: https://raw.githubusercontent.com/nwsheppard/helm-charts/master/charts/
+  #repository: file://../elasticsearch
 - name: fluent-bit
   version: "0.6.0"
   repository: https://kubernetes-charts.storage.googleapis.com/
