--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -29,13 +29,13 @@ snapshot:
     password: test
     username: test
 
-#storage:
-  ## e.g. gp2 for AWS
-  #type: gp2
-  ## e.g. kubernetes.io/aws-ebs for AWS
-  #classProvisioner: volume.alpha.kubernetes.io/storage-class
-  ## Retain or Delete
-  #reclaimPolicy: Delete
+storage:
+  # e.g. gp2 for AWS
+  type: hostPath
+  # e.g. kubernetes.io/aws-ebs for AWS
+  classProvisioner: volume.alpha.kubernetes.io/storage-class
+  # Retain or Delete
+  reclaimPolicy: Delete
 
 kibana:
   enabled: false
