--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -31,7 +31,7 @@ snapshot:
 
 storage:
   # e.g. gp2 for AWS
-  type: hostPath
+  type: standard
   # e.g. kubernetes.io/aws-ebs for AWS
   classProvisioner: volume.alpha.kubernetes.io/storage-class
   # Retain or Delete
